--- a/TicTacToe/MVC/View/Base.lproj/LaunchScreen.storyboard
+++ b/TicTacToe/MVC/View/Base.lproj/LaunchScreen.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,19 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tic-tac-toe-" translatesAutoresizingMaskIntoConstraints="NO" id="16p-9g-1Ji">
-                                <rect key="frame" x="20" y="166.5" width="335" height="334"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="16p-9g-1Ji" secondAttribute="height" multiplier="320:319" id="VeE-tk-su9"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="tic-tac-toe" translatesAutoresizingMaskIntoConstraints="NO" id="16p-9g-1Ji">
+                                <rect key="frame" x="0.0" y="10" width="375" height="647"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="16p-9g-1Ji" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="hIq-Be-zNf"/>
+                            <constraint firstItem="16p-9g-1Ji" firstAttribute="height" secondItem="6Tk-OE-BBY" secondAttribute="height" id="nkJ-Ig-9mD"/>
                             <constraint firstItem="16p-9g-1Ji" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="sbJ-J1-fF6"/>
-                            <constraint firstAttribute="trailing" secondItem="16p-9g-1Ji" secondAttribute="trailing" constant="20" id="syt-j3-lew"/>
-                            <constraint firstItem="16p-9g-1Ji" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" id="wPK-QE-nuz"/>
+                            <constraint firstItem="16p-9g-1Ji" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" id="v5p-ag-4dz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -42,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tic-tac-toe-" width="1920" height="1915"/>
+        <image name="tic-tac-toe" width="1920" height="1915"/>
     </resources>
 </document>
